--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="icon" type="image/png" href="http://fitz-maurice.com/assets/img/favicon.png" />
   <!-- ======== / META TAGS ======== -->
   <!-- ======== STYLESHEETS ======== -->
+  <!-- Inline Reset.css -->
   <style>html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0;}</style>
  
   <!--[if lt IE 9]>
@@ -490,7 +491,7 @@
     <script src="assets/js/grayscale.js"></script>
     <script src="assets/js/functions.js"></script>
     <!-- ======== GOOGLE ANALYTICS ======== -->
-    <script><!-- Google Analytics: change UA-48741641-4 -->
+    <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
