--- a/projects/teg/index.html
+++ b/projects/teg/index.html
@@ -41,14 +41,13 @@
 
       <div class="divider-2"></div>
 
-      <p>The Edens Group is the premier executive and IT recruiting firm in the Washington, D.C. metro area and my current place of employment. As the business grows, I am responsible for producing all print and digital media.</p>
-      <p>
-      I have also produced the social media banners for the firm that can be seen at the below links: <br>
+      <p>The Edens Group is the premier executive and IT recruiting firm in the Washington, D.C. metro area. As the business grows, I am responsible for producing all print and digital media and the responsive code driving the mobile version.</p>
+      <p>I have also produced the social media banners for the firm that can be seen at the below links: <br>
       <a href="https://www.linkedin.com/company/the-edens-group-llc" target="_blank">LinkedIn</a><br>
       <a href="https://www.facebook.com/TheEdensGroup" target="_blank">Facebook</a><br>
       <a href="https://twitter.com/TheEdensGroup" target="_blank">Twitter</a>
       </p>
-      
+
       <div class="divider-2"></div>
 
       <nav id="portfolio-nav">
@@ -56,7 +55,7 @@
         <a href="projects/dayton" class="navigate"><i class="fa fa-angle-right"></i></a>
         <a href="#" id="close-portfolio">X</a>
       </nav>
-        
+
     </div>
   </div>
 </div>
