--- a/index.min.html
+++ b/index.min.html
@@ -89,9 +89,11 @@
 <h1 class=heading-light>COLIN<br>
 FITZ-MAURICE</h1>
 <p class=size-1>
-Hi! I&#39;m Colin. I'm a freelance web design and developer, graphic artist and professional tinkerer.
-I have four years experience hand-coding semantic HTML5 and CSS3 (SCSS) websites, building dynamic PHP and MySQL driven web-apps
-and custom JavaScript and jQuery. I also build robust, custom WordPress sites.
+Hi! I&#39;m Colin. I'm a web developer and designer.
+<br/><br/>
+Currently, I'm the Lead Developer at <a style="font-weight: bold;" href="http://www.twitter.com/lifezette" title=LifeZette target=_blank>@LifeZette</a>.
+<br/><br/>
+I build the <a style="font-weight: bold;" href="http://www.lifezette.com" title=LifeZette target=_blank>website</a> and <a style="font-weight: bold;" href="https://itunes.apple.com/us/app/lifezette/id1047755112?mt=8" title="Mobile App" target=_blank>mobile app</a>.
 </p>
 <div class=divider></div>
 </div>
