--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-sm-6 col-xs-6">
-            &copy; Fitz Creative, LLC. 2016
+            &copy; Fitz Creative, LLC. 2014 - 2016
           </div>
           <div class="col-lg-6 col-sm-6 col-xs-6 text-right">
               <a href="https://developers.google.com/speed/pagespeed/insights/?url=fitz-maurice.com" class="social-1" target="_blank"><i class="fa fa-code"></i> check my work</a>
