--- a/build_local/projects/index.html
+++ b/build_local/projects/index.html
@@ -64,7 +64,7 @@
 
             <div class="mb-8 w-full lg:w-2/3">
             <h2 class="text-lg text-black font-bold">FitBody by Anna Victoria</h2>
-            <p class="text-grey-darkest text-base leading-normal my-2">A React Native application for both iOS and Android driven by a Laravel API.</p>
+            <p class="text-grey-darkest text-base leading-normal my-2">A wellness focused React Native application for both iOS and Android driven by a Laravel API.</p>
             <a href="https://itunes.apple.com/us/app/fit-body-with-anna-victoria/id1281856473" target="_blank" class="text-grey-darker hover:text-black text-sm no-underline hover:underline">View project here &RightArrow;</a>
         </div>
             <div class="mb-8 w-full lg:w-2/3">
@@ -73,28 +73,28 @@
             <a href="https://heal.com/" target="_blank" class="text-grey-darker hover:text-black text-sm no-underline hover:underline">View project here &RightArrow;</a>
         </div>
             <div class="mb-8 w-full lg:w-2/3">
+            <h2 class="text-lg text-black font-bold">Goodworld</h2>
+            <p class="text-grey-darkest text-base leading-normal my-2">Laravel application for social donations through the Facebook and Twitter SDKs and Stripe payment processing.</p>
+            <a href="https://goodworld.me/" target="_blank" class="text-grey-darker hover:text-black text-sm no-underline hover:underline">View project here &RightArrow;</a>
+        </div>
+            <div class="mb-8 w-full lg:w-2/3">
             <h2 class="text-lg text-black font-bold">Monthly Gift</h2>
             <p class="text-grey-darkest text-base leading-normal my-2">A WordPress website with a cross platform Ionic application driven by the WordPress API.</p>
             <a href="https://monthlygift.com/" target="_blank" class="text-grey-darker hover:text-black text-sm no-underline hover:underline">View project here &RightArrow;</a>
         </div>
             <div class="mb-8 w-full lg:w-2/3">
-            <h2 class="text-lg text-black font-bold">Goodworld</h2>
-            <p class="text-grey-darkest text-base leading-normal my-2">Laravel application for social donation through the Facebook and Twitter SDKs.</p>
-            <a href="https://goodworld.me/" target="_blank" class="text-grey-darker hover:text-black text-sm no-underline hover:underline">View project here &RightArrow;</a>
-        </div>
-            <div class="mb-8 w-full lg:w-2/3">
             <h2 class="text-lg text-black font-bold">Salt House Road</h2>
-            <p class="text-grey-darkest text-base leading-normal my-2">A literature, home design and fashion blog built on WordPress and WordPlate. I created the initial design, color scheme and logo.</p>
+            <p class="text-grey-darkest text-base leading-normal my-2">A literature, home design and fashion blog built on WordPress and WordPlate. Original logo, designs and content.</p>
             <a href="https://salthouseroad.com/" target="_blank" class="text-grey-darker hover:text-black text-sm no-underline hover:underline">View project here &RightArrow;</a>
         </div>
             <div class="mb-8 w-full lg:w-2/3">
             <h2 class="text-lg text-black font-bold">LifeZette</h2>
-            <p class="text-grey-darkest text-base leading-normal my-2">WordPress website</p>
+            <p class="text-grey-darkest text-base leading-normal my-2">A lifestyle editorial website built on WordPress.</p>
             <a href="https://lifezette.com/" target="_blank" class="text-grey-darker hover:text-black text-sm no-underline hover:underline">View project here &RightArrow;</a>
         </div>
             <div class="mb-8 w-full lg:w-2/3">
             <h2 class="text-lg text-black font-bold">Jericho Oil</h2>
-            <p class="text-grey-darkest text-base leading-normal my-2">A literature, home design and fashion blog built on WordPress and [https://wordplate.github.io/](WordPlate). I created the initial design, color scheme and logo.</p>
+            <p class="text-grey-darkest text-base leading-normal my-2">WordPress website built on the WordPlate framework.</p>
             <a href="https://jerichooil.com/" target="_blank" class="text-grey-darker hover:text-black text-sm no-underline hover:underline">View project here &RightArrow;</a>
         </div>
                     </main>
