--- a/build_local/contact/sent/index.html
+++ b/build_local/contact/sent/index.html
@@ -62,7 +62,10 @@
                 <main class="container">
                         <h1>Contact</h1>
 
-    <h3>Your message has been sent.</h3>
+    <div class="bg-grey-lightest border-t border-b border-fitz text-fitz px-4 py-3 w-full md:w-2/3" role="alert">
+        <p class="font-bold">Message Sent!</p>
+        <p class="text-sm mt-1">Thank you, I'll reach out to you as soon as I can.</p>
+    </div>
                 </main>
             </div>
         </div>
